# spoof-tunnel

./: .gitignore  Makefile  README-fa.md  README.md  server-config.json.example
.github/workflows/: release.yml  test.yml
cmd/spoof/: main.go
internal/config/: config.go
internal/relay/: local.go  remote.go
internal/tester/: iplist.go  runner.go
internal/transport/: factory.go  ffi.go  spoof_transport.h  transport.go  xdp_receiver.go
panel/backend/internal/api/: handlers.go
panel/frontend/app/dashboard/tester/: page.tsx
rust/: Cargo.toml
rust/spoof-transport/: Cargo.toml
rust/spoof-transport/src/: checksum.rs  icmp_receiver.rs  icmp_sender.rs  icmpv6_receiver.rs  icmpv6_sender.rs  lib.rs  raw_socket.rs  tcp_receiver.rs  tcp_sender.rs  udp_sender.rs
rust/xdp-ebpf/: Cargo.toml
rust/xdp-ebpf/src/: main.rs
rust/xdp-loader/: Cargo.toml  build.rs
rust/xdp-loader/examples/: test_load.rs
rust/xdp-loader/src/: lib.rs
